--- a/details.html
+++ b/details.html
@@ -95,24 +95,74 @@
     </div>
 
     <!-- Comments -->
-    <div class="container p-3 mt-4" style="display: flex; justify-content: center; ">
-      <div style="padding:10px; border-radius: 25px; box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.25); width:fit-content; display: flex; flex-direction: column; height:fit-content; align-items:center; justify-content:center;">
-        <div class="container" style="border: solid; border-color: grey; background-color: #f4f5f6; border-width: 1px; margin:10px;">
-          <div style="display: flex; margin-bottom: 5px;">
+    <div
+      class="container p-3 mt-4"
+      style="display: flex; justify-content: center"
+    >
+      <div
+        style="
+          padding: 10px;
+          border-radius: 25px;
+          box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.25);
+          width: fit-content;
+          display: flex;
+          flex-direction: column;
+          height: fit-content;
+          align-items: center;
+          justify-content: center;
+        "
+      >
+        <div
+          class="container"
+          style="
+            border: solid;
+            border-color: grey;
+            background-color: #f4f5f6;
+            border-width: 1px;
+            margin: 10px;
+          "
+        >
+          <div style="display: flex; margin-bottom: 5px">
             <div id="name">Tóth Csaba</div>
-            <span style="margin: 0 5px 0 5px;">-</span>
-            <span id="createdDate" style="font-style:italic;">8 hónapja</span>
+            <span style="margin: 0 5px 0 5px">-</span>
+            <span id="createdDate" style="font-style: italic">8 hónapja</span>
           </div>
-          <hr/>
-          <div id="comment" style=" margin-bottom:10px; border-radius: 25px; padding: 10px 15px 10px 15px; background-color: white; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <hr />
+          <div
+            id="comment"
+            style="
+              margin-bottom: 10px;
+              border-radius: 25px;
+              padding: 10px 15px 10px 15px;
+              background-color: white;
+              box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
+            "
+          >
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
           </div>
         </div>
-        <form style="width: 100%;">
+        <form style="width: 100%">
           <label for="commentAreaId"></label>
-          <textarea id="commentAreaId" style="width: 100%;" name="comment" cols="40" rows="3" placeholder="Írjon véleményt..." ></textarea>
-          <div style="width:100%; display: flex; justify-content: right;">
-              <input type="submit" value="Küldés" class="btn btn-primary" style="margin:5px 0 5px 5px;"/>
+          <textarea
+            id="commentAreaId"
+            style="width: 100%"
+            name="comment"
+            cols="40"
+            rows="3"
+            placeholder="Írjon véleményt..."
+          ></textarea>
+          <div style="width: 100%; display: flex; justify-content: right">
+            <input
+              type="submit"
+              value="Küldés"
+              class="btn btn-primary"
+              style="margin: 5px 0 5px 5px"
+            />
           </div>
         </form>
       </div>
