--- a/details.html
+++ b/details.html
@@ -2,8 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Főoldal</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Kávé Részletező</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -195,24 +194,24 @@
             } else {
               const container = document.getElementById("coffee-details");
               container.innerHTML = `
-                          <table class="table-bordered">
+                          <table class="table table-bordered">
                               <tr>
                                   <td rowspan="5" style="width: 50%;"> 
                                       <img class="img-fluid" src="https://i.imgur.com/SdgMDOM.jpeg" alt="Coffee picture">
                                   </td>
-                                  <td><strong>Coffee Name:</strong> ${data.coffeename}</td>
+                                  <td><strong>Kávé neve:</strong> ${data.coffeename}</td>
                               </tr>
                               <tr>
-                                  <td><strong>Manufacturer:</strong> ${data.manufacturer}</td>
+                                  <td><strong>Gyártó:</strong> ${data.manufacturer}</td>
                               </tr>
                               <tr>
-                                  <td><strong>Region:</strong> ${data.region}</td>
+                                  <td><strong>Régió:</strong> ${data.region}</td>
                               </tr>
                               <tr>
-                                  <td><strong>Roasting:</strong> ${data.roasting}</td>
+                                  <td><strong>Pörkölés:</strong> ${data.roasting}</td>
                               </tr>
                               <tr>
-                                  <td><strong>Flavors:</strong> ${data.flavornotes}</td>
+                                  <td><strong>Ízjegyek:</strong> ${data.flavornotes}</td>
                               </tr>
                           </table>
                       `;
