--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Főoldal</title>
-    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -123,7 +122,7 @@
                               <p class="card-text">${coffee.manufacturer}</p>
                               <div class="d-flex justify-content-between align-items-center">
                                   <span class="text-muted small">${coffee.region}</span>
-                                  <a href="details.html?id=${coffee.id}" class="btn btn-sm btn-primary">View</a>
+                                  <a href="details.html?id=${coffee.id}" class="btn btn-sm btn-primary">Megtekint</a>
                               </div>
                           </div>
                       </div>
