--- a/details.html
+++ b/details.html
@@ -3,7 +3,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kávé Részletező</title>
-    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -134,6 +133,7 @@
           cols="40"
           rows="3"
           placeholder="Írjon véleményt..."
+          required
         ></textarea>
         <div style="width: 100%; display: flex; justify-content: right">
           <input
@@ -234,26 +234,11 @@
           
           const fetchComments = () => {
             fetch(`coffeeComments.php?CoffeID=${coffeeId}`)
-            .then(response => response.json())
+            .then(response => response.text())
             .then(data => {
               const commentsContainer = document.getElementById('comments-container');
 
-              data.forEach(comment => {
-                const commentHtml = `
-                <div style="display: flex; margin-bottom: 5px;">
-                  <div id="name">${comment.username}</div>
-                    <span style="margin: 0 5px 0 5px;">-</span>
-                    <span id="createdDate" style="font-style:italic;">${comment.createdat}</span>
-                </div>
-                
-                <div id="comment" style=" margin-bottom:10px; border-radius: 25px; padding: 10px 15px 10px 15px; background-color: white; box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);">
-                  <p>${comment.comment}</p>
-                </div>
-                <hr/>`;
-
-              commentsContainer.innerHTML += commentHtml;
-
-              });
+              commentsContainer.innerHTML = data;
             })
             .catch(error => {
               console.error('Error fetching comments:', error);
