--- a/Login.html
+++ b/Login.html
@@ -51,7 +51,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    window.location.href = "index.html";
+                    window.location.href = "index.php";
                 } else {
                     alert(data.error || "Bejelentkezés sikertelen!");
                 }
